# anki-dict

./: .gitignore  cambridge_parser.py  maker.py  pyproject.toml  readme.md
cambridge_parser/: cambridge_parser.py
dictionary /: AS: Beginner.txt
