[tool.poetry]
name = "anki-english-creator"
version = "0.1.0"
description = ""
authors = ["Shakhzod Yusupov <YuShakhzod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
ankisync2 = "^0.3.4"
genanki = "^0.13.1"
anki = "^23.12.1"
aqt = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
